# platform/src/api/handlers/attachments/index.ts
@@ -1,4 +1,0 @@
-import { Request, Response } from "express"
-import { AttachmentPersistence } from "../../../persistence/attachments"
-
-const { getAttachments } = new AttachmentPersistence()
