# platform/src/api/handlers/resources/index.ts
@@ -1,0 +1,4 @@
+import { Request, Response } from "express"
+import { ResourcePersistence } from "../../../persistence/resources"
+
+const { getResource } = new ResourcePersistence()
