# platform/src/api/handlers/users/index.ts
@@ -84,7 +84,7 @@ put.apiDoc = {
       content: {
         "application/json": {
           schema: {
-            $ref: "#/components/schemas/UserProfile",
+            $ref: "#/components/schemas/User",
           },
         },
       },
